KioskApplication update